# APS

./: .env.example  .gitignore  README.md  add_user.py  app.py  backend.py  database.py  init_users.py  main.py  pyproject.toml  requirements.txt  teste.py  teste_resquest_pubmed.py
.chainlit/: config.toml
.chainlit/translations/: pt-BR.json
Templates_prompt/: prompt.yaml
core/: agents.py  example_multi_agent_client.py
databases/: README.md  __init__.py  agent_memory.db  database.py
langchain_chatbot/: __init__.py
mcp/: README.md  __init__.py  mcp_pubmed_client.py  mcp_pubmed_server.py  mcp_servers.json
public/: stylesheet.css  theme.json
tests/: test_interactive.py  test_multi_agent_quick.py  teste.py  teste_step.py
uml/: classes.puml  sequence.puml  use_case.puml
users/: add_user.py  init_users.py
