[project]
name = "langchain-chatbot"
version = "0.1.0"
description = "Chatbot com LangChain e Chainlit"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "chainlit>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_chatbot"]

