[project]
name = "langchain-chatbot"
version = "0.1.0"
description = "Chatbot com LangChain e Chainlit"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.21.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "chainlit==2.5.5",
    "ollama==0.4.8",
    "SQLAlchemy==2.0.41",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-core>=0.1.0",
    "groq>=0.4.0",
    "PyYAML>=6.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.23.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_chatbot"]

